--- a/Set/View/Base.lproj/Main.storyboard
+++ b/Set/View/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1qB-Kd-oXN">
-                                <rect key="frame" x="10" y="44" width="394" height="69"/>
+                                <rect key="frame" x="10" y="54" width="394" height="69"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="j6D-et-bV4" userLabel="ScoreLabel">
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="24"/>
@@ -64,14 +64,14 @@
                                 </subviews>
                             </stackView>
                             <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ss-xS-FMt" userLabel="SetContainerView" customClass="SetContainerView" customModule="Set" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="113" width="414" height="749"/>
+                                <rect key="frame" x="0.0" y="123" width="414" height="739"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="1qB-Kd-oXN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7To-Vr-bNp"/>
+                            <constraint firstItem="1qB-Kd-oXN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="7To-Vr-bNp"/>
                             <constraint firstItem="0ss-xS-FMt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Enm-GW-rvM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1qB-Kd-oXN" secondAttribute="trailing" constant="10" id="Ktk-6c-jeF"/>
                             <constraint firstItem="1qB-Kd-oXN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="YMu-8I-VvU"/>
